--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           option D
         </button>
         <h3 id="result" style="display: none">default</h3>
-        <button type="button" id="next" style="display: none">next button</button>
+        <button type="button" id="next" style="display: none">Next</button>
       </form>
     </section>
     <script src="index.js"></script>
